<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/grey_medium"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToobar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80dp"
        android:background="@color/black">

        <co.instaflix.config.view.font.FuturaLight
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginRight="@dimen/space_8dp"
            android:text="@string/series"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18sp"
            android:textStyle="bold" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <co.instaflix.config.view.font.FuturaBold
        android:id="@+id/tvTitleOnAir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/on_air"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSeriesPopular" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeriesPopular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/panelEmpty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePopular" />

    <co.instaflix.config.view.font.FuturaBold
        android:id="@+id/tvTitlePopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/popular"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToobar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeriesOnAir"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleOnAir" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:layout_marginLeft="@dimen/space_8dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginEnd="@dimen/space_8dp"
        android:layout_marginRight="@dimen/space_8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <co.instaflix.config.view.font.FuturaLight
            android:id="@+id/tvEmpty"
            android:layout_width="@dimen/space_200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:gravity="center"
            android:text="@string/empty_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginRight="@dimen/space_8dp"
            app:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpty" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loaderSeries"
        android:layout_width="@dimen/space_20dp"
        android:layout_height="@dimen/space_30dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginBottom="@dimen/space_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>