<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navigation_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbarDetailMovies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80dp"
        android:background="@color/grey_medium">

        <co.instaflix.config.view.font.FuturaLight
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvToolbarDetailContentMovies"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginRight="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btClose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginRight="@dimen/space_30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToolbarDetailMovies">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFlyerDetailMovies"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/loaderMovieDetail"
                android:layout_width="@dimen/space_20dp"
                android:layout_height="@dimen/space_30dp"
                android:layout_marginTop="@dimen/space_8dp"
                android:layout_marginBottom="@dimen/space_16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:elevation="@dimen/space_8dp"
                android:outlineAmbientShadowColor="@color/black"
                android:padding="@dimen/space_8dp"
                android:layout_marginBottom="@dimen/space_30dp"
                app:cardBackgroundColor="@color/grey_medium"
                app:cardCornerRadius="@dimen/space_8dp"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16dp"
                    android:orientation="vertical">

                    <co.instaflix.config.view.font.FuturaBold
                        android:id="@+id/tvTitleMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_20sp" />

                    <co.instaflix.config.view.font.FuturaLight
                        android:id="@+id/tvOverviewMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_20dp"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/space_10dp"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <co.instaflix.config.view.font.FuturaLight
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="@dimen/space_8dp"
                            android:gravity="right"
                            android:text="@string/calification"
                            android:textColor="@color/white" />

                        <co.instaflix.config.view.font.FuturaBold
                            android:id="@+id/tvCalificationDetailMovies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/space_10dp"
                        android:gravity="right|center_vertical"
                        android:orientation="horizontal">

                        <co.instaflix.config.view.font.FuturaLight
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="@dimen/space_8dp"
                            android:gravity="right"
                            android:text="@string/duration"
                            android:textColor="@color/white" />

                        <co.instaflix.config.view.font.FuturaBold
                            android:id="@+id/tvDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:textColor="@color/white" />

                        <co.instaflix.config.view.font.FuturaBold
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:text="@string/min"
                            android:textColor="@color/white" />

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>